# Pipeline-Suggester

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.md  demo_research.py  main.py  overview.md  prompts.md  pyproject.toml  requirements.txt  start.md  test_analyzer.py  test_researcher.py  web_app.py
agents/: __init__.py  action_suggester.py  orchestrator.py  pipeline_analyzer.py  pipeline_tools.py  research_tools.py  researcher.py
data/: __init__.py  mock_companies.py  sample_pipeline.csv
mcp_server/: __init__.py  server.py
utils/: __init__.py  anonymizer.py
