[project]
name = "pipeline-suggester"
version = "0.1.0"
description = "AI agent system that analyzes a sales pipeline, identifies stagnant deals, researches accounts, and suggests next-best-actions with drafted outreach emails."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "google-adk>=1.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
pipeline-suggester = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
